WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303674
[PIP - Resume] twitch.tv: Unable to resume PIP video until switching back to tab video is playing in
https://bugs.webkit.org/show_bug.cgi?id=303674
Summary
[PIP - Resume] twitch.tv: Unable to resume PIP video until switching back to ...
Brent Fulgham
Reported
2025-12-05 19:10:22 PST
Some media players use the VisibilityState API as part of their media controls logic. This creates a problem for some PIP flows, where the PIP video might be owned by a tab the user has moved away from. Since switching from one tab to another while in PIP is a very common use case, this patch creates a quirk that adjusts the behavior of visibilityState to indicate that the document is visible if it has an active PIP window.
Attachments
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2025-12-05 19:10:41 PST
<
rdar://problem/102420527
>
Brent Fulgham
Comment 2
2025-12-05 19:27:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54967
EWS
Comment 3
2025-12-11 11:21:22 PST
Committed
304308@main
(54e267670df1): <
https://commits.webkit.org/304308@main
> Reviewed commits have been landed. Closing PR #54967 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug